banner section added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- header -->
     <header>
+      <!-- nav section -->
       <nav>
         <i class="fa-solid fa-bars menu-icon"></i>
         <h2 class="nav-title">Influencer products</h2>
@@ -22,6 +23,23 @@
           <li><i class="fa-solid fa-cart-shopping shopping-cart"></i></li>
         </ul>
       </nav>
+
+      <!-- banner section -->
+      <section class="banner">
+        <div class="banner-content">
+          <p class="banner-title">Start your Journey as Influencer</p>
+          <p class="banner-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <button class="btn-primary">
+            Preebook now <i class="fa-solid fa-arrow-right"> </i>
+          </button>
+        </div>
+        <div class="banner-img">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </section>
     </header>
 
     <!-- main -->
