--- a/index.html
+++ b/index.html
@@ -43,7 +43,155 @@
     </header>
 
     <!-- main -->
-    <main></main>
+    <main>
+      <!-- company section -->
+      <section class="company-container">
+        <hr />
+        <div class="companys">
+          <img src="logos/Alibaba.svg" alt="" />
+          <img src="logos/Amazon.svg" alt="" />
+          <img src="logos/Daraz.pk Logo.svg" alt="" />
+          <img src="logos/Ebay.svg" alt="" />
+          <img src="logos/Rakuten.svg" alt="" />
+          <img src="logos/Walmart.svg" alt="" />
+          <img src="logos/Target.svg" alt="" />
+        </div>
+        <hr />
+      </section>
+      <!-- popular section  -->
+      <section class="popular">
+        <h3 class="popular-collection-title">Popular Collection</h3>
+        <div class="collection-cards">
+          <div class="card">
+            <img src="images/tripod.png" alt="" />
+            <h4 class="card-title">Flex Tripod</h4>
+            <h5 class="card-price">$50.48</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+
+          <div class="card">
+            <img src="images/mic.png" alt="" />
+            <h4 class="card-title">microphone</h4>
+            <h5 class="card-price">$120.25</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/airpod.png" alt="" />
+            <h4 class="card-title">Airbuds</h4>
+            <h5 class="card-price">$100.00</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/drone.png" alt="" />
+            <h4 class="card-title">Drone</h4>
+            <h5 class="card-price">$980.00</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/lights.png" alt="" />
+            <h4 class="card-title">Light Setup</h4>
+            <h5 class="card-price">$1200.00</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/setup.png" alt="" />
+            <h4 class="card-title">Photoshoot set</h4>
+            <h5 class="card-price">$820.00</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <h4 class="card-title">Vlogging Camera</h4>
+            <h5 class="card-price">$1800.80</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/camera.png" alt="" />
+            <h4 class="card-title">Green Screen</h4>
+            <h5 class="card-price">$25.48</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/action.png" alt="" />
+            <h4 class="card-title">Action Camera</h4>
+            <h5 class="card-price">$380.00</h5>
+            <div class="star">
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+              <img src="images/Vector.svg" alt="" />
+            </div>
+            <p class="card-description">
+              Wordwide shifting available Buyers protection possible!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer -->
     <footer></footer>
   </body>
