--- a/index.html
+++ b/index.html
@@ -190,6 +190,27 @@
             </p>
           </div>
         </div>
+        <div class="see-more">
+          <a href="">See More <i class="fa-solid fa-arrow-right"> </i></a>
+        </div>
+      </section>
+      <!-- feature section -->
+      <section class="featured">
+        <div class="featured-img">
+          <img src="images/gear.png" alt="" />
+        </div>
+        <div class="featured-content">
+          <h3 class="featured-title">Featured products at one place</h3>
+          <p class="featured-description">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
+          </p>
+
+          <button class="featured-btn">
+            Join Now <i class="fa-solid fa-arrow-right"> </i>
+          </button>
+        </div>
       </section>
     </main>
     <!-- footer -->
