--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </p>
           </div>
           <div class="card">
-            <img src="images/camera.png" alt="" />
+            <img src="images/single-light.png" alt="" />
             <h4 class="card-title">Green Screen</h4>
             <h5 class="card-price">$25.48</h5>
             <div class="star">
@@ -214,7 +214,17 @@
       </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <h4 class="footer-title">Influencer products</h4>
+      <p class="copyright">Copyright © 2020 influencer products</p>
+      <p class="all-right-reserved">All rights reserved</p>
+      <ul>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-facebook"></i></li>
+        <li><i class="fa-brands fa-twitter"></i></li>
+        <li><i class="fa-brands fa-youtube"></i></li>
+      </ul>
+    </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/c00fb4165f.js"
